--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,16 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7"
 
 install:
   - pip install -r requirements.txt
 
 script:
   - python manage.py test
+
+deploy:
+  provider: pypi
+  user: pdrum
+  password:
+  on:
+    tags: true
