--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 bleach==3.0.2
 certifi==2018.10.15
 chardet==3.0.4
-Django==2.1.3
+Django>=1.11.0
 django-nose==1.4.6
-djangorestframework==3.9.0
+djangorestframework
 docutils==0.14
 flake8==3.6.0
 idna==2.7
